compiler/lume_parse/src/snapshots/lume_parse__tests__doc_comments_snapshots@struct.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"/// This is a doc comment\n        struct Foo { }\")"
---
SOURCE_FILE@0..36
  STRUCT@0..36
    DOC_COMMENT@0..25
      DOC_COMMENT@0..25 "/// This is a doc com ..."
    STRUCT_KW@25..31 "struct"
    IDENT@31..34 "Foo"
    LEFT_BRACE@34..35 "{"
    RIGHT_BRACE@35..36 "}"
