compiler/lume_parse/src/snapshots/lume_parse__tests__doc_comments_snapshots@trait_method.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item,\n\"trait Foo {\n            /// This is a doc comment\n            fn bar() -> void { }\n        }\")"
---
SOURCE_FILE@0..92
  TRAIT@0..92
    TRAIT_KW@0..5 "trait"
    WHITESPACE@5..6 " "
    NAME@6..9
      IDENT@6..9 "Foo"
    WHITESPACE@9..10 " "
    LEFT_BRACE@10..11 "{"
    WHITESPACE@11..24 "\n            "
    METHOD@24..82
      DOC_COMMENT@24..62
        DOC_COMMENT@24..49 "/// This is a doc com ..."
        WHITESPACE@49..62 "\n            "
      SIG@62..79
        FN_KW@62..64 "fn"
        WHITESPACE@64..65 " "
        NAME@65..68
          IDENT@65..68 "bar"
        PARAM_LIST@68..70
          LEFT_PAREN@68..69 "("
          RIGHT_PAREN@69..70 ")"
        WHITESPACE@70..71 " "
        RETURN_TYPE@71..79
          ARROW@71..73 "->"
          WHITESPACE@73..74 " "
          NAMED_TYPE@74..79
            PATH@74..79
              PATH_SEGMENT@74..79
                PATH_TYPE@74..79
                  IDENT@74..78 "void"
                  WHITESPACE@78..79 " "
      BLOCK@79..82
        LEFT_BRACE@79..80 "{"
        WHITESPACE@80..81 " "
        RIGHT_BRACE@81..82 "}"
    WHITESPACE@82..91 "\n        "
    RIGHT_BRACE@91..92 "}"
