compiler/lume_parse/src/snapshots/lume_parse__tests__enum_snapshots@empty.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"enum Foo {}\")"
---
SOURCE_FILE@0..11
  ENUM@0..11
    ENUM_KW@0..4 "enum"
    WHITESPACE@4..5 " "
    NAME@5..8
      IDENT@5..8 "Foo"
    WHITESPACE@8..9 " "
    LEFT_BRACE@9..10 "{"
    RIGHT_BRACE@10..11 "}"
