compiler/lume_parse/src/snapshots/lume_parse__tests__enum_snapshots@single_variant.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"enum Foo { Bar }\")"
---
SOURCE_FILE@0..12
  ENUM@0..12
    ENUM_KW@0..4 "enum"
    NAME@4..7
      IDENT@4..7 "Foo"
    LEFT_BRACE@7..8 "{"
    CASE@8..11
      IDENT@8..11 "Bar"
    RIGHT_BRACE@11..12 "}"
