compiler/lume_parse/src/snapshots/lume_parse__tests__enum_snapshots@trailing_comma.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"enum Foo { Bar, Baz, }\")"
---
SOURCE_FILE@0..17
  ENUM@0..17
    ENUM_KW@0..4 "enum"
    NAME@4..7
      IDENT@4..7 "Foo"
    LEFT_BRACE@7..8 "{"
    CASE@8..11
      IDENT@8..11 "Bar"
    COMMA@11..12 ","
    CASE@12..15
      IDENT@12..15 "Baz"
    COMMA@15..16 ","
    RIGHT_BRACE@16..17 "}"
